# mcplink

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml
.gitlab/issue_templates/: Bug Report.md  Documentation Update.md  Feature Request.md  General Task.md
.gitlab/merge_request_templates/: merge_request_template-en.md  merge_request_template-kr.md
GUI/: pnpm-lock.yaml
GUI/src/: app.html
GUI/src/lib/components/: mcp-card.svelte
GUI/src/routes/detail/: +page.svelte
SSAFY12-free/: package.json
SSAFY12-free/src-tauri/: Cargo.toml
SSAFY12-free/src-tauri/src/: commands.rs
SSAFY12-free/src/lib/data/: mcp-api.ts
SSAFY12-free/src/routes/search/: +page.svelte
app/: .gitignore  DB.json  TESTING-NOTIFICATIONS.md  app.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  test-notification.js  tsconfig.json  vite.config.js
app/src/: $app.d.ts  app.css  app.html  hooks.server.ts  test-notification.js
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  force_activate.rs  lib.rs  main.rs  notification_system.rs
app/src/lib/: contexts.ts  notifications.ts  toast-system.js
app/src/lib/components/: card.svelte  confirm-modal.svelte  mcp-card.svelte  search.svelte  select.svelte  toast.svelte
app/src/lib/data/: cards.ts  mcp-api.ts
app/src/lib/hooks/: useNotification.ts
app/src/lib/stores/: data-store.ts  toast.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/Installed-MCP/: +page.svelte
app/src/routes/MCP-list/: +page.svelte  NotificationHandler.svelte  toast-handler.js
app/src/routes/detail/: +page.svelte
app/src/routes/first-install/: +layout.svelte  +page.svelte
app/src/routes/notification/: +page.svelte
app/src/routes/popup/: +page.svelte
app/src/routes/search/: +page.svelte
app/src/routes/settings/: +page.svelte  notification-test.svelte
app/src/routes/test/: +page.svelte
backend/: .gitignore  Dockerfile  HELP.md  build.gradle  docker-compose.yml  settings.gradle
backend/src/main/java/kr/co/mcplink/: McplinkApplication.java
backend/src/main/resources/: application-local.properties  application.properties  application.yml
backend/src/test/resources/: application-test.yml
exec/: .env-sample  README.md  secret-sample.yml
frontend/: .gitignore  CONTRIBUTING-KR.md  README.md  board.html  contact.html  create-post.html  deploy.sh  download.html  index.html  mcp-servers.html  post-detail.html  qna.html  server-detail.html
frontend/assets/css/: style.css
frontend/assets/js/: board.js  config.js  create-post.js  mcp-servers.js  post-detail.js  script.js  server-detail.js
frontend/lang/: en.json  ko.json
frontend/oauth/: callback.html
frontend/partials/: footer.html  header.html
infra/jenkins/: Dockerfile  docker-compose.yml
mcp-server/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: main.ts
mcp-server/src/core/ports/: fallback.input.port.ts  recommendation.notifier.port.ts  tag.provider.port.ts
mcp-server/src/core/services/: fallback.service.ts
mcp-server/src/infrastructure/adapters/: crawler.adapter.ts  gui.adapter.ts  mcp.adapter.ts
mcp-server/src/infrastructure/config/: index.ts
(+290 files in other folders)
