[package]
name = "gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gui_bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tauri-plugin-os = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"
urlencoding = "2.1.3" 
lazy_static = "1.4.0"
notify-rust = "4.10.0"
winrt-notification = "0.5.1"
url = "2.4.1"
chrono = "0.4.31"
# Windows API 접근용 (앱 강제 활성화)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

